Set jvm flags